# turtle

./: .gitignore  README.md  flake.nix  package.json  pnpm-lock.yaml  shell.nix  tsconfig.json
.github/workflows/: release.yml
TAI/: README.md  build.bash
TAI/ai_agent/: agent.py  agent_history.json  dir_aware.py  executor.py  file_ops.py  llm.py  main.py  pyproject.toml  terminal_ui.py
TAI/ai_agent/ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
TAI/ai_agent/model_call_parser/: main.py  parser.py
TAI/ai_agent/model_call_parser/agent_executor/: agents_execs.py  executor_base.py  llm_handlers.py
TAI/ai_agent/model_call_parser/prompt_template/: prompt_template.py  task.py
TAI/ai_agent/tools/: __init__.py  main_tools.py
public/: Editor copy.tsx
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  agent_history.json  script.sh  tauri.conf.json
src-tauri/app/: app.py
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/ui/: provider.tsx
src/features/editor/: Editor.tsx
src/hooks/: index.ts  useParseAnsi.ts
src/layouts/nav/: Nav.tsx
src/pages/: AiInput.tsx  Terminal.tsx  index.ts
src/store/: globalStore.ts
src/themes/: index.ts
src/types/: index.ts
src/utils/: generateName.ts  index.ts  terminalColors.ts
